[package]
name = "suinput-core"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
suinput-types = { path = "../suinput-types" }
flume = "0.10"
parking_lot = "0.12"
thunderdome = "0.5"
raw-window-handle = "0.4"
regex = "1.5"
dashmap = "5.3"
strum = "0.24"
log = "0.4"
itertools = "0.10"
once_cell = "1.10"
knuffel = "2.0"
nalgebra = { version = "0.31", features = ["convert-mint"] }
