[package]
name = "openxr-driver"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
suinput-types = { path = "../../suinput-types" }
thiserror = "1.0"
once_cell = "1.13"
parking_lot = "0.12"
suinput = { path = "../../suinput" }
openxr = { git = "https://github.com/Sorenon/openxrs", branch = "layer-breaking"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"