[package]
name = "sdl2-driver"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
sdl2-sys = "0.35"
suinput-types = { path = "../../suinput-types" }
parking_lot = "0.12"
once_cell = "1.10"
nalgebra = { version = "0.31", features = ["convert-mint"] }

[dev-dependencies]
sdl2 = "0.35"
winit = "0.26"
