[package]
name = "windows-driver"
version = "0.0.1"
edition = "2021"

[dependencies]
suinput = { path = "../../" }
thiserror = "1.0"
once_cell = "1.10"
parking_lot = "0.12"

[dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Input",
    "Win32_UI_Input_Touch",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties"
]

[dev-dependencies]
winit = "0.26"
anyhow = "1.0"